src/test/ui/borrowck/issue-51415.nll.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/issue-51415.rs:16:42
   |
LL |     let opt = a.iter().enumerate().find(|(_, &s)| {
   |                                          ^^^^^-^
   |                                          |    |
   |                                          |    data moved here
   |                                          cannot move out of borrowed content
   |
note: move occurs because `s` has type `std::string::String`, which does not implement the `Copy` trait
  --> $DIR/issue-51415.rs:16:47
   |
LL |     let opt = a.iter().enumerate().find(|(_, &s)| {
   |                                               ^

error[E0507]: cannot move out of data in a `&` reference
  --> $DIR/issue-51415.rs:16:47
   |
LL |     let opt = a.iter().enumerate().find(|(_, &s)| {
   |                                               ^
   |                                               |
   |                                               cannot move out of data in a `&` reference
   |                                               cannot move

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0507`.
